Add Nobel.java, update some old files